[workspace]
members = [
    "fmi",
    "fmi-schema",
    "fmi-sim",
    "fmi-sys",
    "fmi-test-data",
    "fmi-export",
    "fmi-export-derive",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
license = "MIT OR Apache-2.0"
edition = "2024"
authors = ["John Hughes <jondo2010@gmail.com>"]
repository = "https://github.com/jondo2010/rust-fmi"
keywords = ["model", "ode", "modelica"]
categories = ["science", "simulation"]
homepage = "https://github.com/jondo2010/rust-fmi"
include = [
    "Cargo.toml",
    "benches/*.rs",
    "examples/*.rs",
    "src/**/*.rs",
    "tests/*.rs",
    "build.rs",
]

[workspace.dependencies]
anyhow = { version = "1.0" }
arrow = { version = "55.2" }
chrono = "0.4.41"
document-features = "0.2"
fmi = { path = "fmi", version = "0.5.0", default-features = false }
fmi-export = { path = "fmi-export", version = "0.5.0" }
fmi-export-derive = { path = "fmi-export-derive", version = "0.5.0" }
fmi-schema = { path = "fmi-schema", version = "0.5.0", default-features = false }
fmi-sim = { path = "fmi-sim", version = "0.5.0" }
fmi-sys = { path = "fmi-sys", version = "0.5.0" }
fmi-test-data = { path = "fmi-test-data", version = "0.5.0" }
itertools = "0.14"
libloading = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1"
test-log = { version = "0.2", features = ["trace"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v5"] }
zip = "4.0"

[patch.crates-io]
#arrow = { git = "https://github.com/jondo2010/arrow-rs.git", branch = "fine_grained_integer_inference" }

[package]
name = "fmi-workspace"
version = "0.0.0"
publish = false
edition.workspace = true

[dev-dependencies]
fmi = { workspace = true }
fmi-test-data = { workspace = true }
test-log = { workspace = true }
