[workspace]
members = ["fmi", "fmi-schema", "fmi-sim", "fmi-sys", "fmi-test-data"]
resolver = "2"

[workspace.package]
version = "0.5.0"
license = "MIT OR Apache-2.0"
edition = "2024"
authors = ["John Hughes <jondo2010@gmail.com>"]
repository = "https://github.com/jondo2010/rust-fmi"
keywords = ["model", "ode", "modelica"]
categories = ["science", "simulation"]
homepage = "https://github.com/jondo2010/rust-fmi"
include = [
    "Cargo.toml",
    "benches/*.rs",
    "examples/*.rs",
    "src/**/*.rs",
    "tests/*.rs",
    "build.rs",
]

[workspace.dependencies]
anyhow = { version = "1.0" }
arrow = { version = "55.2" }
document-features = "0.2"
fmi = { path = "fmi", version = "0.5.0", default-features = false }
fmi-schema = { path = "fmi-schema", version = "0.5.0", default-features = false }
fmi-sim = { path = "fmi-sim", version = "0.5.0" }
fmi-sys = { path = "fmi-sys", version = "0.5.0" }
fmi-test-data = { path = "fmi-test-data", version = "0.5.0" }
itertools = "0.14"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1"
thiserror = "1.0"
zip = "4.0"

[patch.crates-io]
yaserde_derive = { git = "https://github.com/jondo2010/yaserde.git", branch = "serialize_vec_as_attribute" }

[package]
name = "fmi-workspace"
version = "0.0.0"
publish = false
edition.workspace = true

[dev-dependencies]
fmi = { workspace = true }
fmi-test-data = { workspace = true }
