[package]
name = "cargo-fmi"
version = "0.1.0"
description = "Cargo subcommand for FMI packaging and tooling"
readme = "README.md"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
include.workspace = true

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
flexi_logger = { workspace = true }
fmi = { workspace = true, features = ["fmi2", "fmi3"] }
fmi-schema = { workspace = true, features = ["serde", "fmi2"] }
fmi-export = { workspace = true, features = ["fmi3"] }
libloading = { workspace = true }
log = { workspace = true }
platforms = { version = "3.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = { workspace = true }
zip = { workspace = true }
