[package]
name = "fmi-check"
version = "0.2.0"
authors = ["John Hughes <jondo2010@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
arrow = { version = "49.0", features = ["csv", "prettyprint"] }
fmi = { path = ".." }
fmi-schema = { path = "../fmi-schema", features = ["arrow"] }
log = "0.4"
num-traits = "0.2"
sensible-env-logger = "0.3"
structopt = { version = "0.3", features = ["paw"] }
