[package]
name = "fmi-export-derive"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
include.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
fmi = { workspace = true, features = ["fmi3"] }
uuid = { workspace = true }
proc-macro-error2 = "2.0"
attribute-derive = "0.10"
convert_case = "0.6"
yaserde = "0.12"
chrono = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
