[package]
name = "fmi-export-derive"
version = "0.1.1"
description = "Proc-macro support for fmi-export"
readme = "README.md"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true
homepage.workspace = true
include.workspace = true

[lib]
proc-macro = true

[dependencies]
attribute-derive = "0.10"
chrono = { workspace = true }
convert_case = "0.11"
fmi = { workspace = true, features = ["fmi3"] }
proc-macro-error2 = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
uuid = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
