[package]
name = "fmi-schema"
version = "0.1.0"
description = "XML schema support for FMI 2.0 and 3.0"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true

[features]
default = ["fmi2", "fmi3"]
## Enable support for FMI 2.0
fmi2 = []
## Enable support for FMI 3.0
fmi3 = []
## Enable support for Apache Arrow Schema
arrow = ["dep:arrow"]

[dependencies]
arrow = { workspace = true, optional = true }
chrono = { version = "0.4" }
document-features = { workspace = true }
itertools = "0.12"
lenient_semver = "0.4"
semver = "1.0"
thiserror = "1.0"
yaserde = "0.9.2"
yaserde_derive = "0.9.2"
