[package]
name = "fmi-sim"
version = "0.1.0"
description = "A pure Rust FMI simulator"
readme = "README.md"
publish = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["fmi2", "fmi3", "cs", "me"]
## Enable support for FMI 2.0
fmi2 = ["fmi/fmi2"]
## Enable support for FMI 3.0
fmi3 = ["fmi/fmi3"]
## Enable support for Model Exchange
me = []
## Enable support for Co-Simulation
cs = []
## Enable support for Scheduled Execution
se = []


[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true, features = ["csv", "prettyprint"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1.1"
document-features = { workspace = true }
env_logger = "0.11"
fmi = { workspace = true, features = ["arrow"] }
itertools = { workspace = true }
log = "0.4"
num-traits = "0.2"
sensible-env-logger = "0.3"
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.14"
float-cmp = { version = "0.9", features = ["std"] }
fmi-test-data = { workspace = true }
rstest = "0.18"
test-log = { workspace = true }
