[package]
name = "fmi-sys"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = ["fmi2", "fmi3"]
## Enable support for FMI 2.0
fmi2 = ["dep:log"]
## Enable support for FMI 3.0
fmi3 = []

[dependencies]
document-features = { workspace = true }
libloading = { workspace = true }
log = { version = "0.4", optional = true }

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
