[package]
name = "fmi-sys"
version = "0.1.1"
description = "Raw bindgen bindings to FMI 2.0 and 3.0"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true

[features]
default = ["fmi2", "fmi3"]
## Enable support for FMI 2.0
fmi2 = ["dep:log"]
## Enable support for FMI 3.0
fmi3 = []

[dependencies]
document-features = { workspace = true }
libloading = { workspace = true }
log = { version = "0.4", optional = true }

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
