[package]
name = "fmi-test-data"
version.workspace = true
description = "Utilities for fetching test data from Modelica's Reference-FMUs repository."
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[dependencies]
anyhow = { workspace = true }
const_format = "0.2"
fetch-data = "0.2"
fmi = { workspace = true, default_features = false, features = [
    "fmi2",
    "fmi3",
] }
tempfile = { workspace = true }
zip = { workspace = true }
