[package]
name = "fmi"
version = "0.3.0"
description = "A Rust interface to FMUs (Functional Mockup Units) that follow the FMI Standard. See http://www.fmi-standard.org/"
readme = "README.md"
publish = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["fmi2", "fmi3", "arrow"]
## Enable support for FMI 2.0
fmi2 = ["libc"]
## Enable support for FMI 3.0
fmi3 = []
## Enable support for Apache Arrow Schema
arrow = ["dep:arrow"]

[dependencies]
arrow = { workspace = true, optional = true }
document-features = { workspace = true }
fmi-schema = { workspace = true }
fmi-sys = { workspace = true }
itertools = { workspace = true }
# Note: libc is only used for FMI 2.0 support, needed for alloc
libc = { version = "0.2", features = ["align"], optional = true }
libloading = { workspace = true }
log = { version = "0.4", features = ["std", "serde"] }
tempfile = "3.1"
thiserror = "1.0"
url = "2.2"
zip = { workspace = true }

[build-dependencies]
built = "0.7"

[dev-dependencies]
assert_approx_eq = "1.1"
env_logger = "0.10"
test-log = { workspace = true }
test-data = { workspace = true }
