[package]
name = "fmi"
version.workspace = true
description = "A Rust interface to FMUs (Functional Mockup Units) that follow the FMI Standard. See http://www.fmi-standard.org/"
readme = "README.md"
publish = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [
    "export",
    "fmi2",
    "fmi3",
    #"ls-bus",
    #"arrow"
]
## Enable suuport for exporting FMUs
export = []
## Enable support for FMI 2.0
fmi2 = ["fmi-schema/fmi2", "dep:libc", "dep:url"]
## Enable support for FMI 3.0
fmi3 = ["fmi-schema/fmi3"]
## Enable support for FMI 3.0 LS-Bus
ls-bus = ["fmi3", "fmi-sys/ls-bus"]
## Enable support for Apache Arrow Schema
arrow = ["dep:arrow", "fmi-schema/arrow"]

[dependencies]
arrow = { workspace = true, optional = true }
document-features = { workspace = true }
fmi-schema = { workspace = true, default-features = false }
fmi-sys = { workspace = true }
itertools = { workspace = true }
# Note: libc is only used for FMI 2.0 support, needed for alloc
libc = { version = "0.2", features = ["align"], optional = true }
libloading = { workspace = true }
log = { version = "0.4", features = ["std", "serde"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
url = { version = "2.2", optional = true }
zip = { workspace = true }
paste = { workspace = true }

[build-dependencies]
built = "0.8"
