[package]
name = "fmi_check"
version = "0.2.0"
authors = ["John Hughes <jondo2010@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.38"
csv = "1.0.5"
fmi = { path = ".." }
log = "0.4.8"
sensible-env-logger = "0.3"
prettytable-rs = "0.10.0"
structopt = { version = "0.3.21", features = ["paw"] }
