[package]
name = "fmi_check"
version = "0.2.0"
authors = ["John Hughes <jondo2010@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
csv = "1.0"
fmi = { path = ".." }
log = "0.4"
sensible-env-logger = "0.3"
prettytable-rs = "0.10"
structopt = { version = "0.3", features = ["paw"] }

ndarray = { version = "0.15" }
ndarray-csv = { version = "0.5" }
ndarray-interp = { version = "0.4" }
