[package]
name = "test-data"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
fetch-data = "0.1"
fmi = { workspace = true }
zip = { workspace = true }
