[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.18"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
zip = "4.0"
tempfile = "3.1"
fmi-schema = { path = "../fmi-schema", default-features = false, features = ["fmi3"] }
yaserde = "0.12"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
libloading = "0.8"
regex = "1.0"
