[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.22"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
fmi = { workspace = true, features = ["fmi3"] }
libloading = "0.8"
log = "0.4"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.1"
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
zip = "4.0"
