[package]
name = "bouncing_ball"
description = "Example port of the BouncingBall FMU from the Reference FMUs"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
fmi = { workspace = true, features = ["fmi3"] }
fmi-export = { workspace = true, features = ["fmi3"] }
